# pdi

./: README.md
7-segment-display-morphology/: CMakeLists.txt  README.md  main.cpp
bubble_counter/: README.md  main  main.cpp
canny/: README.md  main.cpp
cannyllism/: README.md  main.cpp  pointillism.cpp
contours/: README.md  main.cpp
convolution/: main.cpp
dft/: README.md  main.cpp  sinusoidal-256-8.yml
docs/: drafts.md
equalization/: main.cpp
filestorage/: main  main.cpp  sinusoidal-256-4.yml
frequency_domain_filtering/: README.md  main.cpp
hello/: hello  hello.cpp
helpers/: cam.hpp  histogram.hpp
histogram/: main.cpp
homomorphic_filter/: README.md  main.cpp
hu_moments/: README.md  hu-moments.cpp  main.cpp
hu_moments_contours/: README.md  main.cpp
kmeans/: README.md  main.cpp
morphology/: README.md  main.cpp
morphology_viewer_system/: main.cpp
motion_detector/: CMakeLists.txt  main.cpp
negative/: README.md  main  main.cpp
pixels/: pixels  pixels.cpp
quadrants/: README.md  main  main.cpp
steganography/: Makefile  README.md  main  main.cpp
tiltshift_images/: main.cpp
tiltshift_videos/: main.cpp
